--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "phoenix-project-site",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "admin": "concurrently -k -n admin,site \"decap-server\" \"next dev\"",
+    "dev": "cross-env NEXT_DISABLE_PATCH_INCORRECT_LOCKFILE=1 next dev",
+    "admin": "concurrently -k -n admin,site \"decap-server\" \"cross-env NEXT_DISABLE_PATCH_INCORRECT_LOCKFILE=1 next dev\"",
     "prebuild": "node scripts/generate-heroes-index.js && node scripts/generate-sitemap.js",
-    "build": "next build",
-    "export": "next export",
+    "build": "cross-env NEXT_DISABLE_PATCH_INCORRECT_LOCKFILE=1 next build",
+    "export": "cross-env NEXT_DISABLE_PATCH_INCORRECT_LOCKFILE=1 next export",
     "deploy": "node scripts/deploy.js",
     "lint": "next lint"
   },
@@ -24,6 +24,7 @@
     "remark-html": "^16.0.1"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.7",
