--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "phoenix-project-site",
   "private": true,
   "scripts": {
-    "dev": "node scripts/next-run.js dev",
-    "admin": "concurrently -k -n admin,site \"decap-server\" \"node scripts/next-run.js dev\"",
+    "dev": "next dev",
+    "admin": "concurrently -k -n admin,site \"decap-server\" \"next dev\"",
     "prebuild": "node scripts/generate-heroes-index.js && node scripts/generate-sitemap.js",
-    "build": "node scripts/next-run.js build",
-    "export": "node scripts/next-run.js export",
+    "build": "next build",
+    "export": "next export",
     "deploy": "node scripts/deploy.js",
     "lint": "next lint"
   },
@@ -14,7 +14,7 @@
     "basic-ftp": "^5.0.5",
     "concurrently": "^8.2.2",
     "decap-cms": "^3.0.0",
-    "decap-server": "^1.7.0",
+    "decap-server": "^3.0.0",
     "dotenv": "^16.4.5",
     "gray-matter": "^4.0.3",
     "next": "^14.2.5",
