fix admin script

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "admin": "node scripts/start-admin.js",
+    "admin": "decap-server --port 8081",
     "prebuild": "node scripts/generate-heroes-index.js && node scripts/generate-sitemap.js",
     "build": "next build",
     "export": "next export",
